<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HealthApp</string>
    <string name="helloo">hello test !!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="register">Create Account</string>
    <string name="forgetpassword">Forget Password ?</string>
    <string name="email">Email</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="confirmepassword">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="language">Language</string>
    <string name="english" translatable="false">English</string>
    <string name="save">Save</string>
    <string name="francais" translatable="false">Francais</string>
    <string name="makeanappointment">Make an appointment</string>
    <string name="myappointments">My appointments</string>
    <string name="about">About</string>
    <string name="available">Available</string>
    <string name="notavailable">Not Available</string>
    <string name="itineraire">Itinerary</string>
    <string name="confirmrdv">Confirm appointment</string>

    <string name="doctor">Doctor</string>
    <string name="speciality">Speciality</string>
    <string name="reason">Reason</string>
    <string name="date">Date</string>
    <string name="schedule_v1">Schedule</string>
    <string name="title_activity_maps" translatable="false" tools:ignore="MissingTranslation">title_activity_maps</string>
    <string name="motif">Reason</string>
    <string name="choix_specialite">Choose a speciality</string>
    <string name="choix_medecin">Choose a doctor</string>

    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="about_specialite">Hospital specialities :</string>
    <string name="surgery">- Surgery</string>
    <string name="generalmedecine">- General Medecine</string>
    <string name="ophthalmology">- Ophthalmology</string>
    <string name="dermatology">- Dermatology</string>
    <string name="aboutlemanshospital">Health App  is an application for the hospital LeMans which will go to allow a user to take a appointment with his doctor.</string>
    <string name="aboutadress">Address : 2 Street Android Studio 7200 Le Mans</string>
    <string name="shedule">"Opening time   9:00 - 18:00"</string>
    <string name="Contactus">Contact us</string>
    <string name="message" translatable="false">Message...</string>
    <string name="send">Send</string>
    <string name="messagesend">Message sent</string>

    <string name="choix_langue">Choose your language</string>




</resources>
