<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.AboutActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/backg">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo_health_app"/>

    <TextView
        android:id="@+id/activity_about_lemanshospital"
        android:paddingBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:text="@string/aboutlemanshospital" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/activity_about_adress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/aboutadress" />

        <TextView
            android:id="@+id/activity_about_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/shedule" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginRight="124dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_specialite"
            android:id="@+id/activity_about_specialite"/>

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp">

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surgery"
            android:id="@+id/activity_about_surgery"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dermatology"
            android:id="@+id/activity_about_dermatology"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ophthalmology"
            android:id="@+id/activity_about_ophthalmology"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generalmedecine"
            android:id="@+id/activity_about_generalmedecine"/>

    </LinearLayout>


    <Button
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Contactus"
        android:ems="10"
        android:background="@drawable/rounded_border_button"
        android:fontStyle="normal"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:id="@+id/activity_about_nouscontacter"/>

</LinearLayout>