<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.SignupActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/backg"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/logo_health_app"

        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:ems="10"
        android:background="@drawable/rounded_border_edittext"
        android:drawableLeft="@drawable/ic_person_24dp"
        android:hint="@string/firstname"
        android:id="@+id/activity_signup_first_name_txt"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:ems="10"
        android:background="@drawable/rounded_border_edittext"
        android:drawableLeft="@drawable/ic_person_24dp"
        android:hint="@string/lastname"
        android:id="@+id/activity_signup_last_name_txt"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:ems="10"
        android:background="@drawable/rounded_border_edittext"
        android:drawableLeft="@drawable/ic_email_24dp"
        android:hint="@string/email"
        android:id="@+id/activity_signup_email_txt"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:ems="10"
        android:background="@drawable/rounded_border_edittext"
        android:drawableLeft="@drawable/ic_lock_outline_24dp"
        android:hint="@string/password"
        android:id="@+id/activity_signup_password_txt"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:ems="10"
        android:background="@drawable/rounded_border_edittext"
        android:drawableLeft="@drawable/ic_lock_outline_24dp"
        android:hint="@string/confirmepassword"
        android:id="@+id/activity_signup_confirm_password_txt"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:background="@drawable/rounded_border_button"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:id="@+id/activity_signup_signup_btn"/>
    />

</LinearLayout>