<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:ems="10"
        android:background="@drawable/rounded_border_edittext"
        android:drawableLeft="@drawable/ic_email_24dp"
        android:hint="@string/email"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:ems="10"
        android:background="@drawable/rounded_border_edittext"
        android:drawableLeft="@drawable/ic_lock_outline_24dp"
        android:hint="@string/password"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:background="@drawable/rounded_border_button"
        android:text="@string/login"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/forgetpassword"/>

</LinearLayout>