<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.HomePageActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:ems="15"
        android:background="@drawable/rounded_border_button"
        android:text="@string/makeanappointment"
        android:id="@+id/activity_home_page_make_an_appointment_btn"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:ems="15"
        android:background="@drawable/rounded_border_button"
        android:text="@string/myappointments"
        android:id="@+id/activity_home_page_my_appointments_btn"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:ems="15"
        android:background="@drawable/rounded_border_button"
        android:text="@string/about"
        android:id="@+id/activity_home_page_about_btn"/>


</LinearLayout>