<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.SettingLanguageActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_francais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:onClick="onRadioButtonClicked"
            android:text="@string/francais"
            tools:ignore="OnClick" />

        <RadioButton
            android:id="@+id/radio_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:onClick="onRadioButtonClicked"
            android:text="@string/english"
            tools:ignore="OnClick" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:background="@drawable/rounded_border_button"
        android:text="@string/save"/>

</LinearLayout>